# mojo-playgound

./: LICENSE  README.md  pyproject.toml
mojo_playground/inventory_app/: inventory.mojo
